--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "start": "nuxt start",
     "generate": "nuxt generate",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
-    "test": "jest"
+    "test": "jest",
+    "deploy": "push-dir --dir=dist --branch=gh-pages --cleanup"
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.3.6",
@@ -35,6 +36,7 @@
     "jest": "^24.1.0",
     "nuxt-property-decorator": "^2.5.0",
     "prettier": "^1.19.1",
+    "push-dir": "^0.4.1",
     "stylelint": "^10.1.0",
     "vue-jest": "^4.0.0-0"
   }
